Ligação do html com css, mudança do título

--- a/index.html
+++ b/index.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css"/>
     <title>LETRECO</title>
 </head>
+
 <body>
-    <div class="game-container">
-        <div class="titulo">LETRECO</div>
-        <div class="letras"></div>
-        <div class="teclado"></div>
+    <div class="game-container"> <!-- Conteiner onde o jogo ficará -->
+        <div class="titulo"> <!-- Titulo do jogo --> 
+            <span>L</span>
+            <span>E</span>
+            <span>T</span>
+            <span>R</span>
+            <span>E</span>
+            <span>C</span>
+            <span>O</span>
+        </div>
+        <div class="letras"></div> <!-- Container onde serão inseridas as letras -->
+        <div class="teclado"></div> <!-- Conteiner que possuí o teclado -->
     </div>
 </body>
+
 </html>
