Adicionado estilo a letras do titulo

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="titulo"> <!-- Titulo do jogo --> 
             <span>L</span>
             <span>E</span>
-            <span>T</span>
+            <span class="letra-amarela">T</span>
             <span>R</span>
-            <span>E</span>
+            <span class="letra-vermelha">E</span>
             <span>C</span>
-            <span>O</span>
+            <span class="letra-verde">O</span>
         </div>
         <div class="letras"></div> <!-- Container onde serão inseridas as letras -->
         <div class="teclado"></div> <!-- Conteiner que possuí o teclado -->
