--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <div class="letras"></div> <!-- Container onde serão inseridas as letras -->
         <div class="teclado"></div> <!-- Conteiner que possuí o teclado -->
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
