--- a/index.html
+++ b/index.html
@@ -21,7 +21,13 @@
             <span class="letra-verde">O</span>
         </div>
         <div class="letras"></div> <!-- Container onde serão inseridas as letras -->
-        <div class="teclado"></div> <!-- Conteiner que possuí o teclado -->
+       <!-- Conteiner que possuí o teclado -->
+        <div class="teclado">
+            <div id="apagareEnter"></div>
+            <div id="primeiraLinhaTeclado"></div>
+            <div id="segundaLinhaTeclado"></div>
+            <div id="terceiraLinhaTeclado"></div>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
