--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <div class="letras"></div> <!-- Container onde serão inseridas as letras -->
        <!-- Conteiner que possuí o teclado -->
         <div class="teclado">
-            <div id="apagareEnter"></div>
-            <div id="primeiraLinhaTeclado"></div>
-            <div id="segundaLinhaTeclado"></div>
-            <div id="terceiraLinhaTeclado"></div>
+            <div class="container-linha-teclado notAlphabetic" id="apagareEnter"></div>
+            <div class="container-linha-teclado" id="primeiraLinhaTeclado"></div>
+            <div class="container-linha-teclado" id="segundaLinhaTeclado"></div>
+            <div class="container-linha-teclado" id="terceiraLinhaTeclado"></div>
         </div>
     </div>
     <script src="index.js"></script>
