--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="letras"></div> <!-- Container onde serão inseridas as letras -->
        <!-- Conteiner que possuí o teclado -->
         <div class="teclado">
-            <div class="container-linha-teclado notAlphabetic" id="apagareEnter"></div>
+            <div class="container-linha-teclado" id="apagareEnter"></div>
             <div class="container-linha-teclado" id="primeiraLinhaTeclado"></div>
             <div class="container-linha-teclado" id="segundaLinhaTeclado"></div>
             <div class="container-linha-teclado" id="terceiraLinhaTeclado"></div>
